<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_xml"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <!-- Profile Image -->
        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_profile_placeholder"
            android:scaleType="centerCrop"
            android:background="@drawable/circle_background"
            android:layout_marginBottom="16dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_change_image"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/rounded_button"
            android:text="@string/change_profile_picture"
            android:textColor="@color/white" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>


        <!-- User Info Fields -->
        <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/et_name"
            android:textColor="@color/black"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name" />

        <EditText
            android:id="@+id/et_email"
            android:textColor="@color/black"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone"/>


        <!-- Save Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:text="@string/save_changes"/>
        <!-- Emergency Contacts -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_manage_contacts"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:text="@string/manage_emergency_contacts"/>


        <!-- Logout -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_logout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:background="@drawable/rounded_button"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"/>
        <Button
            android:id="@+id/btnFeedback"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="@drawable/rounded_button"
            android:text="Feedback /Suggest Changes"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>
