<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background_xml"
    android:padding="20dp"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:id="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/img_6"/>

    <!-- Title at the Top -->


    <!-- Safety Message -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_safety_our_priority_stay_strong_stay_safe"
        android:textColor="#FAEBEB"
        android:textSize="20sp"
        android:layout_marginTop="18dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"/>

    <!-- Profile Name Box -->
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/gradient_background_xml"
        android:gravity="center"
        android:padding="15dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/tvProfileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wlcm_user_name"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <!-- Fetch Location Button -->
    <Button
        android:id="@+id/btnFetchLocation"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:backgroundTint="@color/white"
        android:padding="12dp"
        android:text="@string/fetch_location"
        android:textColor="#620A0A"
        android:textStyle="bold" />


    <!-- SOS Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSOS"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@drawable/pulsating_button"
        android:gravity="center"
        android:text="@string/sos"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <!-- Emergency Contacts Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEmergencyContacts"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@drawable/rounded_button"
        android:padding="12dp"
        android:text="@string/emergency_contacts"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnFakeCall"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@drawable/rounded_button"
        android:text="Fake Call"
        android:textColor="#6A0F0F" />

</LinearLayout>
